Font-size on mobile version fixed

--- a/style.css
+++ b/style.css
@@ -40,21 +40,60 @@
 }
 
 #projects > ul {
+    list-style-type: none;
     box-shadow: 1px 1px 3px 5px #dbdbdb;
+}
+
+#projects > li {
+    align-content: left;
+    justify-content: left;
 }
 
 #contact {
     margin-top: 50px;
 }
 
+@media (max-width: 1100px) {
+    #contact-text {
+        font-size: 16px;
+    }
+}
+
 @media (max-width: 600px) {
+    #container {
+        margin: 30px;
+    }
     img {
         max-width: 100%;
     }
     #header-text {
-        font-size: 28px;
+        font-size: 24px;
+    }
+    #projects-text{
+        font-size: 24px;
+    }
+    #projects h4 {
+        font-size: 18px;
     }
     #contact-text {
         font-size: 12px;
+    }
+}
+
+@media (max-width: 350px) {
+    #container {
+        margin: 30px;
+    }
+    img {
+        max-width: 100%;
+    }
+    #header-text {
+        font-size: 20px;
+    }
+    #projects-text{
+        font-size: 20px;
+    }
+    #projects h4 {
+        font-size: 18px;
     }
 }
